# omnivision

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/checkpoints/drone_detection_minimal/: args.yaml  results.csv
models/checkpoints/drone_detection_quick/: args.yaml
models/configs/: train_config.yaml
notebooks/: demo_inference.ipynb  train_colab.ipynb
scripts/: train_full.sh  train_minimal.sh  train_quick.sh
src/: yolo.py
src/data/: collection.py  filter_class.py
src/models/: inference.py  train.py
