[project]
name = "omnivision"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=1.3.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "roboflow>=1.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "ultralytics>=8.0.0",
    "wandb>=0.15.0",
]
